broke the scikit demo at some point

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <div id="machine-learning" class="section level3">
 <h3>Machine learning</h3>
 <ul>
-<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/sklearn_primer.html">A brief intro to scikit-learn</a> <br></p></li>
+<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/sklearn_primer.html">A brief intro to scikit-learn (broken)</a> <br></p></li>
 <li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/tidymodelsDemo.html">tidymodels: what’s up</a> <br></p></li>
 </ul>
 </div>
