--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ layout: default
 <p><a href="https://github.com/JHarrisonEcoEvo/Reproducible_workflow_tutorial#readme">How to use make</a> - Make is a tool for automating workflow management. Say you get new data and have to rerun code, make figures, and incorporate them into a document. Make lets you automate this process, among other things.</p>
 </div>
 <div id="bioinformatics" class="section level3">
-<h3>Bioinformatics</h3>
+<h3>Bayesian stuff</h3>
+<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/calculatingMean.html">Intro to Stan: A simple example for calculating the mean of a Normal distribution</a> <br></p></li>
+<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/calculatingMean.html">Intro to Stan: A simple example for calculating the mean of a Normal distribution</a> <br></p></li>
 </div>
 <div id="machine-learning" class="section level3">
 <h3>Machine learning</h3>
