--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 <div id="bioinformatics" class="section level3">
 <h3>Bayesian stuff</h3>
 <li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/calculatingMean.html">Intro to Stan: A simple example for calculating the mean of a Normal distribution</a> <br></p></li>
-<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/calculatingMean.html">Intro to Stan: A simple example for calculating the mean of a Normal distribution</a> <br></p></li>
+<li><p><a href="https://rpubs.com/harrisonjg/845750">CNVRG vignette: how to use the CNVRG R package that I made. This package models count data using a hierarchical model reliant upon the Dirichlet and multinomial distributions.</a> <br></p></li>
 </div>
 <div id="machine-learning" class="section level3">
 <h3>Machine learning</h3>
