added how to make an R package

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
 <div id="general-computing" class="section level3">
 <h3>General computing</h3>
 <p><a href="https://github.com/JHarrisonEcoEvo/Reproducible_workflow_tutorial#readme">How to use make</a> - Make is a tool for automating workflow management. Say you get new data and have to rerun code, make figures, and incorporate them into a document. Make lets you automate this process, among other things.</p>
+<p><a href="https://jharrisonecoevo.github.io/computing_tutorials/R_package_making.html">How to make an R package</a> - The fundamentals of making an R package aRe pretty easy, as shown here.</p>
 </div>
 <div id="bioinformatics" class="section level3">
 <h3>Bayesian stuff</h3>
@@ -27,7 +28,6 @@ layout: default
 <div id="machine-learning" class="section level3">
 <h3>Machine learning</h3>
 <ul>
-<li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/sklearn_primer.html">A brief intro to scikit-learn (broken)</a> <br></p></li>
 <li><p><a href="https://jharrisonecoevo.github.io/computing_tutorials/tidymodelsDemo.html">tidymodels: what’s up</a> <br></p></li>
 </ul>
 </div>
